secciones de la card creadas

--- a/index.html
+++ b/index.html
@@ -13,15 +13,31 @@
 </head>
 <body>
   <main>
-    Learning
+    <section class="img_container">
+      <img src="./assets/images/illustration-article.svg" alt="imagen de muestra" class="img_card">
+    </section>
 
-    Published 21 Dec 2023
+    <article class="card_text">
+      <section class="card_job">
+        Learning
+      </section>
   
-    HTML & CSS foundations
+      <section class="card_date">
+        Published 21 Dec 2023
+      </section>
   
-    These languages are the backbone of every website, defining structure, content, and presentation.
+      <section class="card_title">
+        HTML & CSS foundations
+      </section>
   
-    Greg Hooper
+      <section class="card_paragraph">
+        These languages are the backbone of every website, defining structure, content, and presentation.
+      </section>
+  
+      <section class="card_guy">
+        Greg Hooper
+      </section>
+    </article>
   </main>
 </body>
 </html>
