--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
     </section>
 
     <article class="card_text">
-      <section class="card_job">
+      <section class="card_text_job">
         Learning
       </section>
   
-      <section class="card_date">
+      <section class="card_text_date">
         Published 21 Dec 2023
       </section>
   
-      <section class="card_title">
+      <section class="card_text_title">
         HTML & CSS foundations
       </section>
   
-      <section class="card_paragraph">
+      <section class="card_text_paragraph">
         These languages are the backbone of every website, defining structure, content, and presentation.
       </section>
   
-      <section class="card_guy">
+      <section class="card_text_guy">
         Greg Hooper
       </section>
     </article>
