--- a/index.html
+++ b/index.html
@@ -18,23 +18,24 @@
     </section>
 
     <article class="card_text">
-      <section class="card_text_job">
+      <section class="card_text_job card_content">
         Learning
       </section>
   
-      <section class="card_text_date">
+      <section class="card_text_date card_content">
         Published 21 Dec 2023
       </section>
   
-      <section class="card_text_title">
+      <section class="card_text_title card_content">
         HTML & CSS foundations
       </section>
   
-      <section class="card_text_paragraph">
+      <section class="card_text_paragraph card_content">
         These languages are the backbone of every website, defining structure, content, and presentation.
       </section>
   
-      <section class="card_text_guy">
+      <section class="card_text_guy card_content">
+        <img src="./assets/images/image-avatar.webp" alt="">
         Greg Hooper
       </section>
     </article>
